samples/_failures_safe/1761333805_845261_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d6bd8ec.c: In function ‘main’:
./samples/SAFE/__tmp_8d6bd8ec.c:161:17: error: expected ‘;’ at end of input
  161 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_8d6bd8ec.c:161:9: error: expected declaration or statement at end of input
  161 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_8d6bd8ec.c:161:9: error: expected declaration or statement at end of input
